--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,6 +25,7 @@ $slick-arrow-color: $secondary-color;
 @import "listing";
 @import "carousel";
 @import "rating";
+@import "custom-selectbox";
 
 html, body {
     font-family: 'Marcellus SC', san-serif;
