--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -133,9 +133,7 @@
 
         .sortby {
             .form-control {
-                display: inline-block;
-                width: auto;
-                margin-left: 10px;
+                display: none;
             }
         }
 
