--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -94,40 +94,40 @@
                     }
                 }
 
-                .slider-container {
-                    .-info {
-                        margin-left: 10px;
-                    }
+                // .slider-container {
+                //     .-info {
+                //         margin-left: 10px;
+                //     }
 
-                    .slider {
-                        -webkit-appearance: none;
-                        width: 100%;
-                        height: 5px;
-                        border: 1px solid $secondary-color;
-                        background: $white;
-                        outline: none;
-                        -webkit-transition: .2s;
-                        transition: opacity .2s;
-                    }
+                //     .slider {
+                //         -webkit-appearance: none;
+                //         width: 100%;
+                //         height: 5px;
+                //         border: 1px solid $secondary-color;
+                //         background: $white;
+                //         outline: none;
+                //         -webkit-transition: .2s;
+                //         transition: opacity .2s;
+                //     }
 
-                    .slider::-webkit-slider-thumb {
-                        -webkit-appearance: none;
-                        appearance: none;
-                        width: 25px;
-                        height: 25px;
-                        background: $background-color;
-                        border: 1px solid $secondary-color;
-                        cursor: pointer;
-                    }
+                //     .slider::-webkit-slider-thumb {
+                //         -webkit-appearance: none;
+                //         appearance: none;
+                //         width: 25px;
+                //         height: 25px;
+                //         background: $background-color;
+                //         border: 1px solid $secondary-color;
+                //         cursor: pointer;
+                //     }
 
-                    .slider::-moz-range-thumb {
-                        width: 25px;
-                        height: 25px;
-                        background: $background-color;
-                        border: 1px solid $secondary-color;
-                        cursor: pointer;
-                    }
-                }
+                //     .slider::-moz-range-thumb {
+                //         width: 25px;
+                //         height: 25px;
+                //         background: $background-color;
+                //         border: 1px solid $secondary-color;
+                //         cursor: pointer;
+                //     }
+                // }
             }
         }
 
