--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,16 +9,23 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
-//Slick carousel
-$slick-font-family: FontAwesome;
-$slick-prev-character: "";
-$slick-next-character: "";
-$slick-arrow-color: $secondary-color;
 
-@import "~slick-carousel/slick/slick";
-@import "~slick-carousel/slick/slick-theme";
+@import "~bootstrap/scss/bootstrap";
 
 @import "~ion-rangeslider/css/ion.rangeSlider.min.css";
+
+// @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+// @import "~@fortawesome/fontawesome-free/scss/_icons.scss";
+// $fa-font-path: "../fonts/vendor/font-awesome/webfonts/" !default;
+            // $fa-font-path: "~@fortawesome/fontawesome-free/font-awesome/fonts";
+            // @import "vendor/fontawesome/scss/fontawesome.scss";
+// @import '~font-awesome/scss/font-awesome.scss';
+
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+@import '~@fortawesome/fontawesome-free/scss/v4-shims';
 
 @import "navbar";
 @import "homepage";
@@ -29,6 +36,18 @@ $slick-arrow-color: $secondary-color;
 @import "rating";
 @import "custom-selectbox";
 @import "custom-rangeslider";
+
+
+
+//Slick carousel
+$slick-font-family: 'Font Awesome 5 Free';
+$slick-prev-character: ' \2039';
+$slick-next-character: ' \203A';
+$slick-arrow-color: $secondary-color;
+
+
+@import "~slick-carousel/slick/slick";
+@import "~slick-carousel/slick/slick-theme";
 
 html, body {
     font-family: 'Marcellus SC', san-serif;
