--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -1,4 +1,11 @@
 .listing {
+    .slick-prev, .slick-next {
+        &:before {
+            font-size: 30px;
+            line-height: 10px;
+        }
+    }
+
     .searchbar-body {
         top: 0px;
         display: none;
@@ -12,8 +19,16 @@
         .filters {
             width: 180px;
             margin-top: 45px;
+            text-align: center;
+
+            .clearall-filter-btn {
+                color: $primary-color;
+                background-color: $secondary-color;
+            }
 
             .filter {
+                text-align: left;
+
                 .filter-header {
                     font-size: 18px;
                 }
@@ -128,6 +143,7 @@
                 //         cursor: pointer;
                 //     }
                 // }
+           
             }
         }
 
@@ -139,6 +155,8 @@
 
         .total-items {
             text-align: right;
+            right: 10px;
+            position: relative;
         }
 
         .products-container {
@@ -152,9 +170,11 @@
                     padding: 0px 10px;
                     text-align: center;
                     margin-bottom: 35px;
-                    a{
+
+                    a {
                         color: $secondary-color;
                     }
+
                     .ls-product {
                         position: relative;
                         margin-bottom: 15px;
@@ -190,7 +210,7 @@
                             }
                         }
 
-                        .-name{
+                        .-name {
                             font-weight: bold;
                             font-size: 14px;
                             text-align: center;
@@ -206,6 +226,75 @@
     .listing {
         .searchbar-body {
             top: 33px;
+        }
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .listing {
+        .listing-container {
+            .products-container {
+                margin-top: 45px;
+                .ls-prod-container {
+                    margin: auto;
+                    .ls-product-div {
+                        margin-bottom: 0px;
+                        padding: 1px;
+
+                        .ls-product {
+                            margin-bottom: 0px;
+                        }
+                    }
+                }
+            }
+
+            .filters {
+                width: 100% !important;
+                background: $secondary-color;
+                color: $white;
+                position: absolute;
+                z-index: 1;
+
+                hr {
+                    color: $white;
+                }
+
+                .filter {
+                    text-align: center;
+                    ul {
+                        li {
+                            display: inline-block;
+
+                            .container {
+                                .checkmark {
+                                    border: 1px solid $white !important;
+
+                                    &:after {
+                                        left: 4px;
+                                        top: 1px;
+                                        width: 5px;
+                                        height: 10px;
+                                        border: solid $border-color;
+                                        border-width: 0 3px 3px 0;
+                                        -webkit-transform: rotate(45deg);
+                                        transform: rotate(45deg);
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    .irs-line {
+                        border: 1px solid $white;
+                        background-color: $white !important;
+                    }
+                }
+            }
+        }
+
+        .footer {
+            position: relative;
+            margin-top: 20px;
         }
     }
 }
