Listing for mobile.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -35,3 +35,7 @@ $font-color-black: $secondary-color;
 // Values
 $navbar-height: 72px;
 $navbar-height-mobile: 33px;
+
+
+////////////Listing specific
+$listing-top-ctrl-height: 45px;
