--- a/resources/sass/footer.scss
+++ b/resources/sass/footer.scss
@@ -1,6 +1,6 @@
 .footer{
-    padding: 0px 15px;
-    position: absolute;
+    padding: 15px;
+    position: relative;
     bottom: 0px;
     width: 100%;
     .copyright{
