Add mobile dropdown in listing top controls.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -36,6 +36,7 @@
 @import "rating";
 @import "custom-selectbox";
 @import "custom-rangeslider";
+@import "dropdown";
 
 //Slick carousel
 $slick-font-family: "Font Awesome 5 Free";
