--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19520,35 +19520,6 @@ readers do not read off random characters that represent icons */
   background-color: transparent !important;
 }
 
-.submenu-area .navbar .dropdown:hover .dropdown-menu {
-  display: block;
-}
-
-.submenu-area .navbar .dropdown .dropdown-toggle:active {
-  pointer-events: none;
-}
-
-.submenu-area .navbar .dropdown .dropdown-menu {
-  border: 1px solid #F2F4F3;
-  border-radius: 4px;
-  max-width: 157px;
-  text-align: center;
-}
-
-.submenu-area .navbar .dropdown .dropdown-menu li {
-  border-bottom: 1px solid #F2F4F3;
-  min-height: 30px;
-}
-
-.dropdown-menu {
-  padding: 0;
-  margin: 0;
-  border: 0 solid transition !important;
-  border: 0 solid rgba(0, 0, 0, 0.15);
-  border-radius: 0;
-  box-shadow: none !important;
-}
-
 .mainmenu a,
 .navbar-default .navbar-nav > li > a,
 .mainmenu ul li a,
@@ -19755,9 +19726,44 @@ readers do not read off random characters that represent icons */
     font-size: 23px;
   }
 
+  .listing .listing-container .listing-top-controls .dropdown {
+    margin: 5px;
+    text-align: center;
+  }
+
+  .listing .listing-container .listing-top-controls .dropdown .dropdown-menu {
+    text-align: left;
+  }
+
+  .listing .listing-container .listing-top-controls .dropdown .dropdown-toggle:not(.dropdown-item) {
+    font-size: 22px;
+    color: #0c1c31;
+  }
+
+  .listing .listing-container .listing-top-controls .dropdown .dropdown-toggle:not(.dropdown-item)::after {
+    display: none;
+  }
+
+  .listing .listing-container .listing-top-controls .dropdown .dropdown-item:hover .dropdown-menu {
+    display: block;
+  }
+
+  .listing .listing-container .listing-top-controls .dropdown .dropdown-item:active {
+    background-color: #0c1c31;
+  }
+
+  .listing .listing-container .listing-top-controls .dropdown .dropdown-item::after {
+    display: none;
+  }
+
+  .listing .listing-container .listing-top-controls .dropdown .dropdown-item .fas.fa-angle-right {
+    font-size: 20px;
+  }
+
   .listing .listing-container .listing-top-controls .breadcrumb {
     position: relative;
     float: left;
+    padding: 12px 5px;
   }
 
   .listing .listing-container .products-container {
@@ -20100,6 +20106,27 @@ readers do not read off random characters that represent icons */
   border: 1px solid #0c1c31;
   top: 28px !important;
   width: 100%;
+}
+
+.dropdown .dropdown-menu {
+  border: 1px solid #F2F4F3;
+  border-radius: 4px;
+  max-width: 157px;
+  text-align: center;
+}
+
+.dropdown .dropdown-menu li {
+  border-bottom: 1px solid #F2F4F3;
+  min-height: 30px;
+}
+
+.dropdown-menu {
+  padding: 0;
+  margin: 0;
+  border: 0 solid transition !important;
+  border: 0 solid rgba(0, 0, 0, 0.15);
+  border-radius: 0;
+  box-shadow: none !important;
 }
 
 /* Slider */
