--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -26,8 +26,9 @@
                     width: 100%;
                     background-color: rgba(255, 255, 255, 0.7);
                     height: 25px;
-                    text-align: left;
-                    font-size: 10px;
+                    text-align: left;    
+                    font-size: 14px;
+                    line-height: 14px;
 
                     .-prices {
                         .-cprice {
@@ -47,7 +48,7 @@
                     right: 0px;
 
                     .-icon {
-                        font-size: 15px;
+                        font-size: 20px;
                     }
                 }
 
@@ -55,6 +56,36 @@
                     font-weight: bold;
                     font-size: 14px;
                     text-align: center;
+                }
+            }
+
+
+            &.item-3{
+                @include make-col(1, 3);
+                .wishlist-icon{
+                    margin: 10px;
+                    .-icon{
+                      font-size: 14px;  
+                    }
+                }
+                .prod-info{
+                    font-size: 12px;
+                }
+            }
+            &.item-2{
+                @include make-col(1, 2);
+            }
+            &.item-1{
+                @include make-col(1, 1);
+                .wishlist-icon{
+                    .-icon{
+                      font-size: 30px;  
+                    }
+                }
+                .prod-info{    
+                    height: 40px;
+                    font-size: 22px;
+                    line-height: 30px;
                 }
             }
         }
