--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -10,6 +10,7 @@
             padding: 0px 10px;
             text-align: center;
             margin-bottom: 35px;
+            @include make-col(1, 4);
 
             a {
                 color: $secondary-color;
@@ -26,7 +27,7 @@
                     width: 100%;
                     background-color: rgba(255, 255, 255, 0.7);
                     height: 25px;
-                    text-align: left;    
+                    text-align: left;
                     font-size: 14px;
                     line-height: 14px;
 
@@ -59,33 +60,41 @@
                 }
             }
 
+            @media only screen and (max-width: 768px) {
+                &.item-3 {
+                    @include make-col(1, 3);
 
-            &.item-3{
-                @include make-col(1, 3);
-                .wishlist-icon{
-                    margin: 10px;
-                    .-icon{
-                      font-size: 14px;  
+                    .wishlist-icon {
+                        margin: 10px;
+
+                        .-icon {
+                            font-size: 14px;
+                        }
+                    }
+
+                    .prod-info {
+                        font-size: 12px;
                     }
                 }
-                .prod-info{
-                    font-size: 12px;
+
+                &.item-2 {
+                    @include make-col(1, 2);
                 }
-            }
-            &.item-2{
-                @include make-col(1, 2);
-            }
-            &.item-1{
-                @include make-col(1, 1);
-                .wishlist-icon{
-                    .-icon{
-                      font-size: 30px;  
+
+                &.item-1 {
+                    @include make-col(1, 1);
+
+                    .wishlist-icon {
+                        .-icon {
+                            font-size: 30px;
+                        }
                     }
-                }
-                .prod-info{    
-                    height: 40px;
-                    font-size: 22px;
-                    line-height: 30px;
+
+                    .prod-info {
+                        height: 40px;
+                        font-size: 22px;
+                        line-height: 30px;
+                    }
                 }
             }
         }
