--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,6 +37,7 @@
 @import "custom-selectbox";
 @import "custom-rangeslider";
 @import "dropdown";
+@import "searchbar";
 
 //Slick carousel
 $slick-font-family: "Font Awesome 5 Free";
