--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19255,11 +19255,6 @@ readers do not read off random characters that represent icons */
   display: none;
 }
 
-.navbar [class^=searchbar] {
-  position: absolute;
-  left: calc(50% - 135px);
-}
-
 .navbar .navbar-nav .nav-item .-icon {
   font-size: 30px;
 }
@@ -19311,6 +19306,17 @@ readers do not read off random characters that represent icons */
   }
 }
 
+@media only screen and (min-width: 768px) {
+  .homepage-main-div .searchbar:not(.sb-body) {
+    display: none;
+  }
+
+  .homepage-main-div .footer {
+    position: absolute;
+    padding: 0px 15px;
+  }
+}
+
 .homepage {
   background-color: #fbfbfb;
   background-image: url("/images/homepage-sofa-img.jpeg");
@@ -19324,12 +19330,8 @@ readers do not read off random characters that represent icons */
 @media only screen and (max-width: 768px) {
   .homepage {
     background-size: contain;
-    background-position: top 33px left;
+    background-position: top left;
   }
-}
-
-.homepage .searchbar-header {
-  display: none;
 }
 
 .homepage .category-links {
@@ -19399,62 +19401,7 @@ readers do not read off random characters that represent icons */
   display: none;
 }
 
-.searchbar-body {
-  top: 40vh;
-  height: 55px;
-  width: 50%;
-  max-width: 551px;
-  margin: auto;
-  left: calc(50% - 275px);
-  border: 4px solid #F2F4F3;
-}
-
-.searchbar-body .card-body {
-  padding: 0px 15px;
-}
-
-.searchbar-body .card-body .search-icon {
-  font-size: 30px;
-  color: #ffcc00;
-}
-
-.searchbar-body .card-body .form-control[type=search] {
-  border: none;
-  outline: none !important;
-  box-shadow: none !important;
-}
-
-.searchbar-body .card-body .btn[type=submit] {
-  padding: 0px 15px;
-  background-color: transparent;
-  border: 4px solid #F2F4F3;
-  width: 130px;
-  outline: none !important;
-  box-shadow: none !important;
-  color: #0c1c31;
-}
-
 @media only screen and (max-width: 768px) {
-  .searchbar-body {
-    height: 34px !important;
-    border: 1px solid #000 !important;
-    left: 0px !important;
-    border-radius: 0px;
-    width: 100% !important;
-  }
-
-  .searchbar-body .search-icon {
-    font-size: 18px !important;
-  }
-
-  .searchbar-body .form-control[type=search] {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    max-height: 24px;
-    line-height: 1;
-    font-size: 14px;
-  }
-
   .category-links {
     text-align: left !important;
     padding: 0px !important;
@@ -19574,15 +19521,14 @@ readers do not read off random characters that represent icons */
   color: #0c1c31;
 }
 
+.listing-main-div .searchbar {
+  top: 8px;
+}
+
 .listing .slick-prev:before,
 .listing .slick-next:before {
   font-size: 30px;
   line-height: 10px;
-}
-
-.listing .searchbar-body {
-  top: 0px;
-  display: none;
 }
 
 .listing .listing-container {
@@ -19708,7 +19654,7 @@ readers do not read off random characters that represent icons */
 }
 
 @media only screen and (max-width: 768px) {
-  .listing .searchbar-body {
+  .listing .searchbar {
     top: 33px;
   }
 }
@@ -20169,6 +20115,72 @@ readers do not read off random characters that represent icons */
   border: 0 solid rgba(0, 0, 0, 0.15);
   border-radius: 0;
   box-shadow: none !important;
+}
+
+.searchbar {
+  height: 55px;
+  width: 50%;
+  max-width: 551px;
+  margin: auto;
+  position: absolute;
+  left: calc(50% - 275px);
+  border: 4px solid #F2F4F3;
+}
+
+.searchbar.sb-body {
+  top: 40vh;
+}
+
+.searchbar .card-body {
+  padding: 0px 15px;
+}
+
+.searchbar .card-body .search-icon {
+  font-size: 30px;
+  color: #ffcc00;
+}
+
+.searchbar .card-body .form-control[type=search] {
+  border: none;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.searchbar .card-body .btn[type=submit] {
+  padding: 0px 15px;
+  background-color: transparent;
+  border: 4px solid #F2F4F3;
+  width: 130px;
+  outline: none !important;
+  box-shadow: none !important;
+  color: #0c1c31;
+}
+
+@media only screen and (max-width: 768px) {
+  .searchbar {
+    top: 33px;
+    height: 34px !important;
+    border: 1px solid #000 !important;
+    left: 0px !important;
+    border-radius: 0px;
+    width: 100% !important;
+  }
+
+  .searchbar:not(.open) {
+    display: none;
+  }
+
+  .searchbar .search-icon {
+    font-size: 18px !important;
+  }
+
+  .searchbar .form-control[type=search] {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    max-height: 24px;
+    line-height: 1;
+    font-size: 14px;
+  }
 }
 
 /* Slider */
