--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -1,3 +1,17 @@
+@media only screen and (min-width: 768px) {
+    .homepage-main-div {
+        .searchbar {
+            &:not(.sb-body) {
+                display: none;
+            }
+        }
+        .footer{
+            position: absolute;
+            padding: 0px 15px;
+        }
+    }
+}
+
 .homepage {
     background-color: $background-color;
     background-image: url("/images/homepage-sofa-img.jpeg");
@@ -9,11 +23,7 @@
 
     @media only screen and (max-width: 768px) {
         background-size: contain;
-        background-position: top $navbar-height-mobile left;
-    }
-
-    .searchbar-header {
-        display: none;
+        background-position: top left;
     }
 
     .category-links {
@@ -81,67 +91,12 @@
         }
     }
 
-    .search-icon-mobile{
+    .search-icon-mobile {
         display: none;
     }
 }
 
-.searchbar-body {
-    top: 40vh;
-    height: 55px;
-    width: 50%;
-    max-width: 551px;
-    margin: auto;
-    left: calc(50% - 275px);
-    border: 4px solid $border-color;
-
-    .card-body {
-        padding: 0px 15px;
-
-        .search-icon {
-            font-size: 30px;
-            color: $primary-color;
-        }
-
-        .form-control[type="search"] {
-            border: none;
-            outline: none !important;
-            box-shadow: none !important;
-        }
-
-        .btn[type="submit"] {
-            padding: 0px 15px;
-            background-color: transparent;
-            border: 4px solid $border-color;
-            width: 130px;
-            outline: none !important;
-            box-shadow: none !important;
-            color: $secondary-color;
-        }
-    }
-}
-
 @media only screen and (max-width: 768px) {
-    .searchbar-body {
-        height: 34px !important;
-        border: 1px solid #000 !important;
-        left: 0px !important;
-        border-radius: 0px;
-        width: 100% !important;
-
-        .search-icon {
-            font-size: 18px !important;
-        }
-
-        .form-control[type="search"] {
-            padding-top: 0px;
-            padding-bottom: 0px;
-            max-height: 24px;
-            line-height: 1;
-            font-size: 14px;
-        }
-    }
-
     .category-links {
         text-align: left !important;
         padding: 0px !important;
