--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -4,6 +4,9 @@
             &:not(.sb-body) {
                 display: none;
             }
+            &.sb-body{
+                display: block;
+            }
         }
         .footer{
             position: absolute;
