--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -1,34 +1,36 @@
 @media only screen and (min-width: 768px) {
     .homepage-main-div {
+
         .searchbar {
             &:not(.sb-body) {
                 display: none;
             }
-            &.sb-body{
+
+            &.sb-body {
                 display: block;
             }
         }
-        .footer{
+
+        .footer {
             position: absolute;
             padding: 0px 15px;
         }
     }
 }
 
-.homepage {
-    background-color: $background-color;
-    background-image: url("/images/homepage-sofa-img.jpeg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-    width: 100vw;
-
-    @media only screen and (max-width: 768px) {
-        background-size: contain;
-        background-position: top left;
+.homepage-main-div{
+    .main {
+        background-color: $background-color;
+        background-image: url("/images/homepage-sofa-img.jpeg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 100vh;
+        width: 100vw;
     }
+}
 
+.homepage {
     .category-links {
         position: absolute;
         top: 50vh;
@@ -100,6 +102,12 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .homepage-main-div{
+        .main{
+            background-size: contain;
+            background-position: top $navbar-height-mobile left;
+        }
+    }
     .category-links {
         text-align: left !important;
         padding: 0px !important;
