Frontend dynamic code for sub navigation.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20119,6 +20119,10 @@ readers do not read off random characters that represent icons */
   box-shadow: none !important;
 }
 
+.dropdown-submenu .dropdown-menu {
+  left: 100%;
+}
+
 .searchbar {
   height: 55px;
   width: 50%;
