Add listing API initial code.

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -17,6 +17,10 @@
         margin: auto;
         padding: 0px;
 
+        @media only screen and (min-width: 1200px) {
+            max-width: 75%;
+        }
+
         .filters {
             width: 180px;
             margin-top: 45px;
