--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19539,6 +19539,12 @@ readers do not read off random characters that represent icons */
   padding: 0px;
 }
 
+@media only screen and (min-width: 1200px) {
+  .listing .listing-container {
+    max-width: 75%;
+  }
+}
+
 .listing .listing-container .filters {
   width: 180px;
   margin-top: 45px;
@@ -19854,6 +19860,7 @@ readers do not read off random characters that represent icons */
 
 .products-container .ls-prod-container .ls-product-div .ls-product .prod-info .-prices .-cprice {
   color: #ffcc00;
+  margin: 10px;
 }
 
 .products-container .ls-prod-container .ls-product-div .ls-product .prod-info .-prices .-oldprice {
@@ -19954,12 +19961,92 @@ readers do not read off random characters that represent icons */
 
 .rating-container .rating {
   height: 20px;
-  width: 75px;
-  background-image: url(/images/rating.png);
+  width: 74px;
+  background-image: url(/images/rating2.png);
   background-size: 300px;
   background-repeat: no-repeat;
   display: inline-block;
-  margin: auto;
+  margin: auto 10px;
+}
+
+.rating-container .rating-0_0,
+.rating-container .rating-0_1,
+.rating-container .rating-0_2,
+.rating-container .rating-0_3,
+.rating-container .rating-0_4 {
+  background-position: -227px;
+}
+
+.rating-container .rating-0_5,
+.rating-container .rating-0_6,
+.rating-container .rating-0_7,
+.rating-container .rating-0_8,
+.rating-container .rating-0_9 {
+  background-position: -212px;
+}
+
+.rating-container .rating-1_0,
+.rating-container .rating-1_1,
+.rating-container .rating-1_2,
+.rating-container .rating-1_3,
+.rating-container .rating-1_4 {
+  background-position: -58px;
+}
+
+.rating-container .rating-1_5,
+.rating-container .rating-1_6,
+.rating-container .rating-1_7,
+.rating-container .rating-1_8,
+.rating-container .rating-1_9 {
+  background-position: -198px;
+}
+
+.rating-container .rating-2_0,
+.rating-container .rating-2_1,
+.rating-container .rating-2_2,
+.rating-container .rating-2_3,
+.rating-container .rating-2_4 {
+  background-position: -43px;
+}
+
+.rating-container .rating-2_5,
+.rating-container .rating-2_6,
+.rating-container .rating-2_7,
+.rating-container .rating-2_8,
+.rating-container .rating-2_9 {
+  background-position: -184px;
+}
+
+.rating-container .rating-3_0,
+.rating-container .rating-3_1,
+.rating-container .rating-3_2,
+.rating-container .rating-3_3,
+.rating-container .rating-3_4 {
+  background-position: -29px;
+}
+
+.rating-container .rating-3_5,
+.rating-container .rating-3_6,
+.rating-container .rating-3_7,
+.rating-container .rating-3_8,
+.rating-container .rating-3_9 {
+  background-position: -169px;
+}
+
+.rating-container .rating-4_0,
+.rating-container .rating-4_1,
+.rating-container .rating-4_2,
+.rating-container .rating-4_3,
+.rating-container .rating-4_4 {
+  background-position: -14px;
+}
+
+.rating-container .rating-4_5,
+.rating-container .rating-4_6,
+.rating-container .rating-4_7,
+.rating-container .rating-4_8,
+.rating-container .rating-4_9 {
+  background-position: -155px;
 }
 
 .rating-container .total-ratings {
