--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -34,6 +34,7 @@
                     .-prices {
                         .-cprice {
                             color: $primary-color;
+                            margin: 10px;
                         }
 
                         .-oldprice {
