--- a/resources/sass/dropdown.scss
+++ b/resources/sass/dropdown.scss
@@ -35,7 +35,21 @@
 }
 
 .dropdown-submenu{
+    a{
+        padding: 0px;
+    }
     .dropdown-menu{
         left: 100%;
     }
 }
+
+.dropdown:hover > .dropdown-menu {
+    display: block;
+    margin-top: -4px; // remove the gap so it doesn't close
+ }
+
+//  .dropdown-submenu a:hover{
+//      + .dropdown-menu{
+//         display: block;
+//      }
+//  }
