--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19555,6 +19555,8 @@ input:disabled + .checkmark + .text {
   width: 180px;
   margin-top: 45px;
   text-align: center;
+  overflow: auto;
+  padding: 20px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -19748,7 +19750,7 @@ input:disabled + .checkmark + .text {
     background: #0c1c31;
     color: #ffffff;
     position: absolute;
-    z-index: 1;
+    z-index: 100;
     display: none;
   }
 
