--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -30,6 +30,8 @@ input:disabled + .checkmark, input:disabled + .checkmark + .text{
             width: 180px;
             margin-top: 45px;
             text-align: center;
+            overflow: auto;
+            padding: 20px;
 
             @media only screen and (min-width: 768px) {
                 position: sticky;
@@ -271,7 +273,7 @@ input:disabled + .checkmark, input:disabled + .checkmark + .text{
                 background: $secondary-color;
                 color: $white;
                 position: absolute;
-                z-index: 1;
+                z-index: 100;
                 display: none;
 
                 &.show {
