--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -32,6 +32,7 @@
 @import "footer";
 @import "listing";
 @import "products-container";
+@import "detailspage";
 @import "carousel";
 @import "rating";
 @import "custom-selectbox";
