--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -17,9 +17,13 @@
             }
         }
 
+        .responsive{
+            height: 50px;
+        }
+
         .prod-price-card{
             border-radius: 20px;
-            background-color: white;
+            background-color: aliceblue;
             margin-top: -50px;
             padding: 30px 10px;
             font-size: 24px;
