--- a/resources/sass/carousel.scss
+++ b/resources/sass/carousel.scss
@@ -9,6 +9,9 @@
         .carousel-img{
             margin: auto;
         }
+        .responsive-img-a{
+            outline: none;
+        }
     }
     .slick-prev{
         left: -15px;
