--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19952,7 +19952,13 @@ input:disabled + .checkmark + .text {
 .detailspage-main-div .detailspage .-images-container {
   height: 300px;
   overflow-x: auto;
-  margin: 15px 0px;
+  margin: 0px 0px 15px 0px;
+}
+
+@media (min-width: 768px) {
+  .detailspage-main-div .detailspage .-images-container {
+    margin: 15px 0px;
+  }
 }
 
 .detailspage-main-div .detailspage .-images-container .-images {
