--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -114,7 +114,7 @@
     width: 150px;
     height: 150px;
     border-radius: 75px;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.3) !important;
     &.carousel-zoom-pane{
         margin-top: 100px;
     }
